--- a/config/config.json
+++ b/config/config.json
@@ -12,9 +12,8 @@
             "httpOnly": true
         }
     },
-
     "general":{
-        "version": "0.0.1(5)",
+        "version": "0.0.1(5)"
      },
     "multer":{
         "dest": "../users photos/"
